# typesentinel

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  unified_publish.py
pytype_check/: decorator.py
tests/: conftest.py  test_custom_on_failure.py  test_decorator.py  test_decorator_async.py  test_decorator_extra.py  test_type_check.py  test_type_check_extra.py
type_checking/: decorator.py  type_check.py
typesentinel/: __init__.py  decorator.py  type_check.py
