[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "typesentinel"
version = "0.2.3"
description = "Runtime type checking decorators with sync and async support."
readme = "README.md"
authors = [
    { name = "GrayJou" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["typing", "runtime", "type-checking", "decorators"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/grayjou/typesentinel"
Repository = "https://github.com/grayjou/typesentinel"

[tool.hatch.build.targets.wheel]
packages = ["typesentinel"]

[tool.hatch.build.targets.sdist]
include = ["typesentinel", "README.md", "LICENSE", "tests"]
